--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,127 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/7.2.1/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/7.2.1/firebase-auth.js"></script>
-    <script defer src="/__/firebase/7.2.1/firebase-database.js"></script>
-    <script defer src="/__/firebase/7.2.1/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/7.2.1/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
-  </head>
-  <body>
-    
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Arla B2B</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="css/loading-bar.min.css">
+	<link rel="stylesheet" href="css/main.css">
 
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+	<script defer src="/__/firebase/7.2.1/firebase-app.js"></script>
+	<!-- <script defer src="/__/firebase/7.2.1/firebase-auth.js"></script> -->
+	<script defer src="/__/firebase/7.2.1/firebase-database.js"></script>
+	<!-- <script defer src="/__/firebase/7.2.1/firebase-messaging.js"></script> -->
+	<!-- <script defer src="/__/firebase/7.2.1/firebase-storage.js"></script> -->
+	<script defer src="/__/firebase/init.js"></script>
+</head>
 
-        try {
-          let app = firebase.app();
-          // let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-          // document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          // document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
-  </body>
+<body>
+	<header>
+		<nav>
+			<div class="nav-wrapper">
+				<a href="#!" class="brand-logo">Logo</a>
+				<a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+				<ul class="right hide-on-med-and-down">
+					<li><a href="sass.html">Sass</a></li>
+					<li><a href="badges.html">Components</a></li>
+					<li><a href="collapsible.html">Javascript</a></li>
+					<li><a href="mobile.html">Mobile</a></li>
+				</ul>
+			</div>
+		</nav>
+
+		<ul class="sidenav" id="mobile-demo">
+			<li><a href="sass.html">Sass</a></li>
+			<li><a href="badges.html">Components</a></li>
+			<li><a href="collapsible.html">Javascript</a></li>
+			<li><a href="mobile.html">Mobile</a></li>
+		</ul>
+	</header>
+	<main>
+
+		<ul id="tabs-swipe-demo" style="display:none;" class="tabs">
+			<li class="tab col s3"><a class="active" href="#test-swipe-1">Test 1</a></li>
+			<li class="tab col s3"><a href="#test-swipe-2">Test 2</a></li>
+			<li class="tab col s3"><a href="#test-swipe-3">Test 3</a></li>
+		</ul>
+		<div id="test-swipe-1" class="col s12 question-container grass-green active">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti aperiam sequi velit ex porro quidem
+				saepe
+				incidunt, odit necessitatibus quia officiis excepturi nostrum a atque harum natus nemo quibusdam est.
+			</p>
+			<p>Amet magnam cumque commodi rem, officia fugiat a illo placeat dicta ullam et voluptas aliquid ad
+				exercitationem consectetur dolore error sed doloribus veritatis similique obcaecati nam deserunt ipsum.
+				Officia, sapiente.</p>
+			<p>Natus tempora ut esse deserunt id numquam, sed iusto voluptates reiciendis corrupti, blanditiis incidunt,
+				quo
+				unde? Sed, dolorem officiis architecto autem tempore harum nisi non, et, velit distinctio aliquid vel?
+			</p>
+		</div>
+		<div id="test-swipe-2" class="col s12 question-container red">
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta unde praesentium minima assumenda. Debitis
+				corrupti nostrum quam officiis quibusdam excepturi non! Eius dicta, earum sit quos ullam culpa vitae
+				aliquid.</p>
+			<p>Officiis odio nesciunt ipsum sit, assumenda dolorum? Impedit, possimus corporis. Quibusdam ea commodi
+				perspiciatis nam! Minima architecto quas nam quae explicabo, animi illum tempore dolorum ab, quasi error
+				minus voluptatem.</p>
+			<p>Mollitia, tempore quas, distinctio maiores atque minima inventore, et pariatur labore nam excepturi
+				quibusdam! Quis distinctio eligendi ad! Voluptatibus qui enim atque. Blanditiis temporibus, cumque
+				soluta
+				error sit at tenetur?</p>
+			<p>Natus, iusto ipsa! Inventore accusamus excepturi iure beatae. Ipsam magni iusto sint possimus commodi
+				ducimus
+				repellendus rem obcaecati expedita. Iusto saepe dolorem repellendus harum at tenetur? Quis impedit
+				tempora
+				assumenda!</p>
+		</div>
+		<div id="test-swipe-3" class="col s12 question-container blue">
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit sit possimus sed dolorum quibusdam
+				alias
+				dolorem libero, iusto ea doloremque? Corporis voluptate corrupti alias ratione autem, adipisci sequi?
+				Reiciendis, iusto.</p>
+			<p>Animi vel eum at aspernatur totam, earum dolorum unde pariatur, accusantium repellat esse quidem. Numquam
+				sed
+				esse ratione repellat eveniet. Neque ratione tempora molestias quam rem nobis numquam vero quod.</p>
+			<p>Voluptates, assumenda. Vel, odit et? Aperiam totam nesciunt tempora eligendi quaerat inventore? Facere
+				officiis ipsam dolorem distinctio. Dignissimos, sequi. Atque iusto odit quam iure laborum alias a facere
+				voluptates delectus.</p>
+			<p>Recusandae eveniet similique non sapiente molestias nostrum impedit, ipsa temporibus suscipit nulla,
+				autem,
+				quia ratione blanditiis at? In animi corrupti corporis, consequatur quis quam itaque soluta quo, odit ea
+				sequi?</p>
+			<p>Sed laudantium ipsa dolorum. Sequi provident error, nisi totam ea facilis dolore magnam vero itaque
+				architecto, fugiat eveniet ad facere cumque quasi rerum deleniti suscipit quidem tempore assumenda
+				consequuntur debitis.</p>
+		</div>
+	</main>
+
+	<footer class="page-footer">
+		<div class="container">
+			<div class="row footer-row">
+				<a class="waves-effect waves-light btn prev-btn" onclick="prevTab();">
+					<i class="material-icons left">arrow_back</i>Prev
+				</a>
+				<div id="progressTracker" class="ldBar label-center" data-preset="bubble" data-pattern-size="32"
+					data-fill="https://loading.io/mod/pattern/cloud/index.svg" style="width:36px;height:36px">
+				</div>
+				<a class="waves-effect waves-light btn next-btn" onclick="nextTab();">
+					<i class="material-icons right">arrow_forward</i>Next
+				</a>
+			</div>
+		</div>
+	</footer>
+
+	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+	<script src="js/loading-bar.min.js"></script>
+	<script src="js/variables.js"></script>
+	<script src="js/functions.js"></script>
+	<script src="js/main.js"></script>
+</body>
+
 </html>
