--- a/public/index.html
+++ b/public/index.html
@@ -42,12 +42,13 @@
 	</header>
 	<main>
 
-		<ul id="tabs-swipe-demo" style="display:none;" class="tabs">
-			<li class="tab col s3"><a class="active" href="#test-swipe-1">Test 1</a></li>
-			<li class="tab col s3"><a href="#test-swipe-2">Test 2</a></li>
-			<li class="tab col s3"><a href="#test-swipe-3">Test 3</a></li>
+		<ul id="tabsNav" style="display:none;" class="tabs">
+			<li class="tab col s3"><a class="active" href="#tab-0">Test 1</a></li>
+			<li class="tab col s3"><a href="#tab-1">Test 2</a></li>
+			<li class="tab col s3"><a href="#tab-2">Test 3</a></li>
+			<li class="tab col s3"><a href="#tab-3">Test 3</a></li>
 		</ul>
-		<div id="test-swipe-1" class="col s12 question-container grass-green active">
+		<div id="tab-0" class="col s12 question-container grass-green active">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti aperiam sequi velit ex porro quidem
 				saepe
 				incidunt, odit necessitatibus quia officiis excepturi nostrum a atque harum natus nemo quibusdam est.
@@ -60,7 +61,24 @@
 				unde? Sed, dolorem officiis architecto autem tempore harum nisi non, et, velit distinctio aliquid vel?
 			</p>
 		</div>
-		<div id="test-swipe-2" class="col s12 question-container red">
+		<div id="tab-1" class="col s12 question-container blue">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta unde praesentium minima assumenda. Debitis
+					corrupti nostrum quam officiis quibusdam excepturi non! Eius dicta, earum sit quos ullam culpa vitae
+					aliquid.</p>
+				<p>Officiis odio nesciunt ipsum sit, assumenda dolorum? Impedit, possimus corporis. Quibusdam ea commodi
+					perspiciatis nam! Minima architecto quas nam quae explicabo, animi illum tempore dolorum ab, quasi error
+					minus voluptatem.</p>
+				<p>Mollitia, tempore quas, distinctio maiores atque minima inventore, et pariatur labore nam excepturi
+					quibusdam! Quis distinctio eligendi ad! Voluptatibus qui enim atque. Blanditiis temporibus, cumque
+					soluta
+					error sit at tenetur?</p>
+				<p>Natus, iusto ipsa! Inventore accusamus excepturi iure beatae. Ipsam magni iusto sint possimus commodi
+					ducimus
+					repellendus rem obcaecati expedita. Iusto saepe dolorem repellendus harum at tenetur? Quis impedit
+					tempora
+					assumenda!</p>
+			</div>
+		<div id="tab-2" class="col s12 question-container red">
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta unde praesentium minima assumenda. Debitis
 				corrupti nostrum quam officiis quibusdam excepturi non! Eius dicta, earum sit quos ullam culpa vitae
 				aliquid.</p>
@@ -77,7 +95,7 @@
 				tempora
 				assumenda!</p>
 		</div>
-		<div id="test-swipe-3" class="col s12 question-container blue">
+		<div id="tab-3" class="col s12 question-container yellow">
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit sit possimus sed dolorum quibusdam
 				alias
 				dolorem libero, iusto ea doloremque? Corporis voluptate corrupti alias ratione autem, adipisci sequi?
@@ -101,13 +119,13 @@
 	<footer class="page-footer">
 		<div class="container">
 			<div class="row footer-row">
-				<a class="waves-effect waves-light btn prev-btn" onclick="prevTab();">
+				<a id="prevTabBtn" class="waves-effect waves-light btn prev-btn disabled" onclick="prevTab();">
 					<i class="material-icons left">arrow_back</i>Prev
 				</a>
 				<div id="progressTracker" class="ldBar label-center" data-preset="bubble" data-pattern-size="32"
 					data-fill="https://loading.io/mod/pattern/cloud/index.svg" style="width:36px;height:36px">
 				</div>
-				<a class="waves-effect waves-light btn next-btn" onclick="nextTab();">
+				<a id="nextTabBtn" class="waves-effect waves-light btn next-btn" onclick="nextTab();">
 					<i class="material-icons right">arrow_forward</i>Next
 				</a>
 			</div>
