--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 	<header>
 		<nav>
 			<div class="nav-wrapper">
-				<a href="#!" class="brand-logo">Logo</a>
+				<img src="images/Arla_Logo_RGB_Small.png" alt="" class="brand-logo">
 				<a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 				<ul class="right hide-on-med-and-down">
 					<li><a href="sass.html">Sass</a></li>
