--- a/public/index.html
+++ b/public/index.html
@@ -52,46 +52,9 @@
 			<li class="tab col s3"><a href="#tab-4">Test 4</a></li>
 			<li class="tab col s3"><a href="#tab-5">Test 5</a></li> -->
 		</ul>
-		<section id="initialView" class="row">
-			<div class="col s12 m10 l6 push-m1 push-l3">
-				<h2>Login</h2>
-				<div class="row">
-					<div class="input-field col s12">
-						<input id="email" type="email" value="test@user.dk" disabled class="validate valid">
-						<label for="email">Email</label>
-						<span class="helper-text" data-error="Must be a valid email"
-							data-success="Email is valid"></span>
-					</div>
-				</div>
-				<div class="row">
-					<div class="input-field col s12">
-						<input id="password" value="1234" type="password" disabled>
-						<label for="password">Password</label>
-					</div>
-				</div>
-				<div class="row">
-					<div class="input-field col s12 l6">
-						<select>
-							<option value="" disabled selected>Choose region</option>
-							<option value="1">North</option>
-							<option value="2">South</option>
-							<option value="3">Zealand</option>
-						</select>
-						<label>Select Region</label>
-					</div>
-					<div class="input-field col s12 l6">
-						<select disabled>
-							<option value="" disabled selected>Choose farm</option>
-							<option value="1">DK1</option>
-							<option value="2">DK2</option>
-							<option value="3">DK3</option>
-						</select>
-						<label>Select Farm</label>
-					</div>
-				</div>
-			</div>
-			<div class="row hide-on-small-only">
-				<div class="col m8 push-m2">
+		<section id="initialView" class="row centered">
+			<div class="row">
+				<div class="col s12 hide-on-small-only">
 					<div class="scene">
 						<div class="cow">
 							<div class="head">
@@ -145,19 +108,119 @@
 						</div>
 					</div>
 				</div>
+				<div class="col s12">
+					<h6 class="center-align">Getting everything ready for you.</h6>
+					<div id="loadingBar" data-preset="rainbow" data-duration="5" style="width:50%;height:50%;margin:auto" class="ldBar label-center" data-value="0"></div>
+				</div>
 			</div>
 		</section>
-		<section id="simpleJourneyView" class="row ">
-			<article class="col s12">
-			<h2>Introduction</h2>
-			<p>
-				Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis veritatis ratione error enim minus
-				quaerat, commodi mollitia odit quibusdam ea libero sint asperiores dignissimos maiores sit
-				aspernatur, dolorem nulla rerum.
-			</p>
-		</article>
+		<section id="loginView" class="row hide">
+			<div class="col s12 m10 l6 push-m1 push-l3">
+				<h2>Login</h2>
+				<div class="row">
+					<div class="input-field col s12">
+						<input id="email" type="email" value="test@user.dk" disabled class="validate valid">
+						<label for="email">Email</label>
+						<span class="helper-text" data-error="Must be a valid email"
+							data-success="Email is valid"></span>
+					</div>
+				</div>
+				<div class="row">
+					<div class="input-field col s12">
+						<input id="password" value="1234" type="password" disabled>
+						<label for="password">Password</label>
+					</div>
+				</div>
+				<div class="row">
+					<div class="input-field col s12 l6">
+						<select>
+							<option value="" disabled selected>Choose region</option>
+							<option value="1">North</option>
+							<option value="2">South</option>
+							<option value="3">Zealand</option>
+						</select>
+						<label>Select Region</label>
+					</div>
+					<div class="input-field col s12 l6">
+						<select disabled>
+							<option value="" disabled selected>Choose farm</option>
+							<option value="1">DK1</option>
+							<option value="2">DK2</option>
+							<option value="3">DK3</option>
+						</select>
+						<label>Select Farm</label>
+					</div>
+				</div>
+			</div>
 		</section>
-		<section id="advancedJourneyView" class="row ">
+		<section id="simpleJourneyView" class="row hide">
+			<article class="col s12">
+				<h2>Introduction</h2>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis veritatis ratione error enim
+					minus
+					quaerat, commodi mollitia odit quibusdam ea libero sint asperiores dignissimos maiores sit
+					aspernatur, dolorem nulla rerum.
+				</p>
+				<div class="row">
+					<div class="col s12">
+						<h3>Herd & Cows</h3>
+						<div class="row">
+							<div class="input-field col s12 l6">
+								<input id="herdAmountCows" type="number" step="1" class="validate">
+								<label for="herdAmountCows">Amount of cows</label>
+								<span class="helper-text" data-error="Must be a whole number (eg: 1)">Amount of cows
+									this year</span>
+							</div>
+							<div class="input-field col s12 l6">
+								<input id="herdMilkProduced" type="number" step="0.001" class="validate">
+								<label for="herdMilkProduced">Milk produced</label>
+								<span class="helper-text"
+									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">kg. milk
+									produced this year</span>
+							</div>
+						</div>
+						<div class="row">
+							<div class="input-field col s12 l6">
+								<input id="herdSelfSufficiency" type="number" step="0.001" min="0.001" max="100"
+									class="validate">
+								<label for="herdSelfSufficiency">Self-sufficiency in feed</label>
+								<span class="helper-text"
+									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">% of dry
+									matter</span>
+							</div>
+							<div class="input-field col s12 l6">
+								<input id="cowsFeedConsumption" type="number" class="validate">
+								<label for="cowsFeedConsumption">Feed consumption</label>
+								<span class="helper-text" data-error="Must be a number">kg. dry matter this year</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col s12">
+						<h3>Energy</h3>
+						<div class="row">
+							<div class="input-field col s12 l6">
+								<input id="energyDiesel" type="number" step="0.001" class="validate">
+								<label for="energyDiesel">Diesel used on the farm</label>
+								<span class="helper-text"
+									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">Litres of
+									diesel used on the farm this year</span>
+							</div>
+							<div class="input-field col s12 l6">
+								<input id="energyElectricity" type="number" step="0.001" class="validate">
+								<label for="energyElectricity">Energy used on the farm</label>
+								<span class="helper-text"
+									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">kWh. milk
+									produced this year</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</article>
+		</section>
+		<section id="advancedJourneyView" class="row hide">
 			<article id="tab-0" class="col s12 question-container active">
 				<h2>Introduction</h2>
 				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis veritatis ratione error enim minus
@@ -227,7 +290,7 @@
 				</div>
 			</article>
 		</section>
-		<section id="resultsView" class="row ">
+		<section id="resultsView" class="row hide">
 			<section class="col s12">
 				<h2>Your data</h2>
 			</section>
